youtubeの動画コンテンツを非表示

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ $(document).ready(function() {
  <img src="./images/spacer.png" width="960" height="30" alt="">
  <div style="clear:both;"></div>
 
- <div class="mt30 prl_20">
+ <!--div class="mt30 prl_20">
 
  <div class="pv_l mt15">
  <iframe src="https://www.youtube.com/embed/dDKZ47j8TlU?rel=0" width="410" height="250" frameborder="0" allowfullscreen="allowfullscreen"></iframe><br />
@@ -185,7 +185,7 @@ $(document).ready(function() {
  <p class="center">分解するっちゃの分解力</p>
  </div>
  <div style="clear:both;"></div>
- </div>
+ </div-->
 
 <img src="images/img05_bainda.png" width="800" height="730" alt="「10代の頃は、
 食べても太らなかった!!」" class="mt30">
